Added new settings field name ThreadCount. New async method added name is DownloadFile. Download file method is start to download web site and save to disk , after than with help to Regex Matches method listing urls and calculated with thread count to total page count finally download per link with parallel for each.

--- a/ProjectsWebScraper/appsettings.json
+++ b/ProjectsWebScraper/appsettings.json
@@ -1,6 +1,7 @@
 {
-  "Settings":{
-    "WebSite": "https://tretton37.com/",
-    "SavePath": "C:\\Users\\SENOL\\Documents\\Scraping"
+  "Settings": {
+    "WebSiteUrl": "https://tretton37.com/",
+    "SavePath": "C:\\Users\\SENOL\\Documents\\Scraping",
+    "ThreadCount":  2
   } 
  }
